--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-cors = "*"
-langchain = "*"
-langchain-community = "*"
-langchain-ollama = "*"
-langchain-groq = "*"
-faiss-cpu = "*"
-pdfplumber = "*"
-python-docx = "*"
-unstructured = "*"
-werkzeug = "*"
-python-dotenv = "*"
+flask = "==3.0.0"
+flask-cors = "==4.0.0"
+python-multipart = "==0.0.6"
+werkzeug = "==3.0.1"
+python-dotenv = "==1.0.0"
+langchain = "==0.1.20"
+langchain-core = "==0.1.42"
+langchain-community = "==0.0.41"
+langchain-groq = "==0.1.3"
+langchain-ollama = "==0.3.6"
+groq = "==0.5.0"
+faiss-cpu = "==1.7.4"
+pdfplumber = "==0.10.3"
+python-docx = "==1.1.0"
+unstructured = "==0.11.8"
+numpy = "==1.24.3"
+pandas = "==2.0.3"
 
 [dev-packages]
