--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,18 @@
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-openai==0.1.6
+langchain-ollama==0.2.0
+langchainhub==0.1.15
+langchain-groq==0.0.1
+langchain-text-splitters==0.0.1
+langgraph==0.0.40
+langserve==0.0.35
+fastapi==0.111.0
+uvicorn==0.30.1
+pydantic==2.7.1
+python-dotenv==1.0.1
+pypdf==4.2.0
+tiktoken==0.6.0
+faiss-cpu==1.8.0
 flask==3.0.0
 flask-cors==4.0.0
-langchain==0.1.0
-langchain-community==0.0.13
-langchain-ollama==0.0.1
-langchain-groq==0.0.1
-faiss-cpu==1.7.4
-pdfplumber==0.10.3
-python-docx==1.1.0
-unstructured==0.11.8
-python-multipart==0.0.6
-werkzeug==3.0.1
-langchain-core==0.1.12
-numpy==1.24.3
-pandas==2.0.3
-python-dotenv==1.0.0
